layout bug fix

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -9,7 +9,7 @@ header{
         height: 100%;
         color: $color-secondary;
         font-weight: bold;
-        padding: 1.25rem 0;
+        padding: 1rem 0;
     }
     li:hover{
         color: $color-primary;
